--- a/src/components/HeroComponent.astro
+++ b/src/components/HeroComponent.astro
@@ -9,7 +9,7 @@ import ePortrait from "../assets/images/ePortrait2.jpg";
   <div class="container mx-auto md:flex md:h-full md:w-full">
     <div class="m-8  md:shrink-0">
     <Image
-      class="w-full lg:w-3/4 md:w-1/2 mx-auto border-solid border-2 border-red-900 sm:w-1/2"
+      class="w-1/2 lg:w-3/4 md:w-1/2 mx-auto border-solid border-2 border-red-900 sm:w-1/2"
       src={ePortrait}
       alt="eportrait"
     />
