--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,30 +1,31 @@
 ---
-import TopNav from '../components/TopNav.astro';
-
-
+import TopNav from "../components/TopNav.astro";
 
 interface Props {
   title: string;
 }
 
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
-
-
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <title>{title}</title>
   </head>
   <body>
     <TopNav />
     <div>
-      <slot/>
+      <slot />
     </div>
-
   </body>
 </html>
