--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -4,30 +4,30 @@ interface Props {
   label: string;
   mobile?: boolean;
 }
-const {href, label, mobile} = Astro.props;
+const { href, label, mobile } = Astro.props;
 
 const pathname = new URL(Astro.url).pathname;
 const currentPath = pathname.slice(1);
 
-const isActive = currentPath === href.slice(1)
+const isActive = currentPath === href.slice(1);
 const isMobile = mobile ? "mobile-nav-item" : "nav-item";
+
 ---
 
 <li>
   <a class:list={[isMobile, isActive ? "active" : ""]} href={href}>{label}</a>
 </li>
 
-
 <style>
-.mobile-nav-item {
-  @apply block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-500
-}
+  .mobile-nav-item {
+    @apply block p-4 text-2xl font-semibold bg-bgYellow text-gray-400 hover:bg-green-50 hover:text-green-500;
+  }
 
-  .nav-item {
-    @apply text-sm text-gray-400 hover:text-gray-500;
+  .nav-item {  
+    @apply text-3xl text-gray-400 hover:text-gray-500;
   }
 
   .active {
-    @apply text-gray-900
+    @apply text-gray-900;
   }
 </style>
