--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import TopNav from "../components/TopNav.astro";
+import { AstroFont } from "astro-font";
 
 interface Props {
   title: string;
@@ -14,12 +15,22 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
-      rel="stylesheet"
+
+<AstroFont
+      config={[
+        {
+          src: [],
+          name: "Dancing Script",
+          // Google Fonts URL
+          googleFontsURL: "https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap",
+          preload: true,
+          display: "swap",
+          selector: "ul > NavItem",
+          fallback: "sans-serif",
+        },
+      ]}
     />
+
     <title>{title}</title>
   </head>
   <body>
