--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -20,7 +20,9 @@ const isMobile = mobile ? "mobile-nav-item" : "nav-item";
 </div>
 <style>
   .mobile-nav-item {
-    @apply block p-4 text-2xl font-semibold bg-bgYellow text-gray-400 hover:bg-green-50 hover:text-green-500;
+    @apply block p-4 text-2xl bg-bgYellow text-gray-500 hover:bg-green-50 hover:text-green-500;
+
+    font-family: 'Allura', cursive;
   }
 
   /* .divider {
@@ -29,8 +31,8 @@ const isMobile = mobile ? "mobile-nav-item" : "nav-item";
   } */
 
   .nav-item {  
-    /* @apply text-2xl text-gray-400 hover:text-gray-500; */
-    font-family: 'Dancing Script Variable', cursive;
+    font-family: 'Allura', cursive;
+    /* font-family: 'Dancing Script Variable', cursive; */
     
   }
 
