--- a/src/components/NewestBook.astro
+++ b/src/components/NewestBook.astro
@@ -1,10 +1,17 @@
-  <div>
+---
+
+---
+  
+  
+  <div class="container flex h-400 w-full">
     <div
-      class=" px-4 text-center h-300 border-solid border-2 border-gray-900"
-    >
-      <p class="m-8 p-5 border-solid border-2 border-gray-900">
+      class="text-center flex-1 border">
+      <p class="">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, neque? Quam neque porro repellat blanditiis unde nihil illo dolorem explicabo! Ab consectetur, eaque quae fugiat in vel repellendus omnis tenetur!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione perferendis deleniti rerum fuga quo dolore consequuntur provident placeat animi. Sapiente consequatur explicabo obcaecati ipsa molestiae quo dolorum libero soluta nemo!
       </p>
+    </div>
+    <div class="flex-1 border text-center">
+      <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio aliquid impedit corrupti magni unde nam at, dolor excepturi, aperiam perferendis error fuga eveniet, quia esse exercitationem non. Sed, suscipit commodi?</p>
     </div>
   </div>
