--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -11,12 +11,12 @@ const navItems = [
 ]
 ---
 
-<section class="nav-section">
+<section class="nav-section mt-20">
 
         <!-- DESKTOP NAVIGATION START -->
          <div class="container mx-auto">
       <nav
-        class="relative pl-1 translate-y-16 flex justify-between items-center w-full border-t border-b"
+        class="relative pl-1 flex justify-between items-center w-full border-t border-b"
       >
         <!-- eds icon -->
          <div class="mx-auto lg:mx-8 h-18 w-32">
@@ -42,7 +42,7 @@ const navItems = [
 
           <!-- desktop menue items -->
         <ul
-          class="hidden absolute top-1/4 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex pl-24 lg:pl-12 lg:pt-8 lg:w-3/4 lg:ml-20 md:p-0 lg:space-x-16 md:space-x-8 text-4xl"
+          class="hidden absolute top-1/4 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex pl-24 lg:pl-12 lg:pt-8 lg:w-3/4 lg:ml-20 md:p-0 lg:space-x-12 md:space-x-6 text-4xl"
         >
           <NavItem href="/" label="Home" />
           <NavItem href="about" label="About Me" />
@@ -55,7 +55,7 @@ const navItems = [
 
       <!-- MOBILE NAVIGATION START -->
       <div
-        class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-1/5 z-50 bg-bgYellow"
+        class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-1/4 z-50 bg-bgYellow"
       >
         <div class="navbar-backdrop fixed inset-0 opacity-25"></div>
         <nav
