--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,7 +2,11 @@
 
 import '@fontsource/tangerine';
 import '@fontsource-variable/dancing-script';
-import HeroComponent2 from '../components/HeroComponent2.astro';
+import '@fontsource/cormorant-garamond/500.css';
+import '@fontsource/allura';
+import '@fontsource/cormorant-upright';
+import BooksCover from '../components/BooksCover.astro';
+import NewestBook from '../components/NewestBook.astro';
 
 interface Props {
   title: string;
@@ -21,11 +25,17 @@ const { title } = Astro.props;
   </head>
   <!-- bg-gradient-to-b from-[#c7ab59] to-[#ded2ab]  -->
   <!-- bg-gradient-to-b from-[#c7ab59] from-10% via-[#699ec3] via-30% to-[#ffffff] to-90% to-[#699ec3] -->
-  <body class="bg-gradient-to-b from-[#c7ab59] via-[#c7ab59] to-[#699ec3]">
+  <body class="bg-gradient-to-b from-[#cfd59f] via-[#d2d2c8] to-[#699ec3]">
+    <div class="m-auto">
     <div class="">
       <slot />
     </div>
-    <HeroComponent2 />
-
+    <div class="">
+    <BooksCover />
+    </div>
+    <div>
+      <NewestBook />
+    </div>
+</div>
   </body>
 </html>
