--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 
 import MainLayout from '../layouts/MainLayout.astro';
-import HeroComponent from '../components/HeroComponent.astro';
+import EdsPlusNav from '../components/EdsPlusNav.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <MainLayout title="Epiphanynrhymes Home">
-<HeroComponent />
+  <div>
+<EdsPlusNav />
+</div>
 </MainLayout>
