--- a/src/components/EdsPlusNav.astro
+++ b/src/components/EdsPlusNav.astro
@@ -19,14 +19,14 @@ import eds from '../assets/images/edslogo12.svg'
     </div>
   </div>
 
-  <div class="flex flex-col mx-auto w-full my-10 basis-3/4">
-    <p class="welcome justify-start ml-32 lg:text-3xl py-0 my-0 leading-none">Welcome, i'm</p>
-    <p class="edsName mt-8 text-5xl lg:text-8xl md:text-7xl text-center pb-0 leading-none">
+  <div class="flex flex-col mx-auto w-full mt-10 border">
+    <p class="welcome mx-auto text-gray-500 lg:text-3xl border">Welcome, i'm</p>
+    <p class="edsName mt-4 text-5xl lg:text-8xl md:text-7xl text-center pb-0 border">
       Elaine Denald Stewart
     </p>
-    <p class="profession text-center text-2xl md:text-3xl mt-4 leading-none">Writer & Author</p>
+    <p class="profession text-center text-2xl md:text-3xl leading-none border">Writer & Author</p>
     
-    <p class="books text-center mt-12 text-3xl border-t border-b">
+    <p class="books mx-auto mt-12 text-3xl border-t border-b tracking-wider">
       Epiphany & Rhymes Books
       </p>
     </div>
@@ -44,6 +44,7 @@ import eds from '../assets/images/edslogo12.svg'
 
   .welcome {
     font-family: 'Dancing Script Variable', cursive;
+    transform: scale(.75, 1)
   }
 
   .profession {
