--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
   </head>
   <!-- bg-gradient-to-b from-[#c7ab59] to-[#ded2ab]  -->
   <!-- bg-gradient-to-b from-[#c7ab59] from-10% via-[#699ec3] via-30% to-[#ffffff] to-90% to-[#699ec3] -->
-  <body class="bg-gradient-to-b from-[#cfd59f] via-[#d2d2c8] to-[#699ec3]">
+  <body class="bg-gradient-to-b from-[#cfd59f] via-[#d2d2c8] to-[#699ec3] max-w-screen-xl mx-auto">
     <div class="m-auto">
     <div class="">
       <slot />
