--- a/src/components/EdsPlusNav.astro
+++ b/src/components/EdsPlusNav.astro
@@ -1,14 +1,13 @@
 ---
 import TopNav from "./TopNav.astro";
-import ePortrait from "../assets/images/ePortrait2.jpg";
+import ePortrait from "../assets/images/portrait-ver4@2x.png";
 import { Image } from 'astro:assets';
-import eds from '../assets/images/edslogo12.svg'
 ---
 
 <section class="w-full mt-12 flex flex-wrap md:flex-nowrap">
-  <div class="grid justify-items-center content-center mx-auto basis-1/4 md:ml-8">
-    <div class=" z-[-1] back"></div>
-    <div class="image transform -translate-x-6 my-[-22rem]">
+  <div class="grid justify-items-center content-center mx-auto px-4 md:pl-14 basis-1/4 md:ml-8">
+    <div class=" z-[-1] back rounded-full"></div>
+    <div class="image transform -translate-x-4 my-[-17.5rem]">
       <Image
         height={380}
         width={280}
@@ -19,14 +18,14 @@ import eds from '../assets/images/edslogo12.svg'
     </div>
   </div>
 
-  <div class="flex flex-col mx-auto w-full mt-10 border">
-    <p class="welcome mx-auto text-gray-500 lg:text-3xl border">Welcome, i'm</p>
-    <p class="edsName mt-4 text-5xl lg:text-8xl md:text-7xl text-center pb-0 border">
+  <div class="flex flex-col mx-auto w-full mt-10">
+    <p class="welcome mx-auto text-gray-500 lg:text-3xl">Welcome, i'm</p>
+    <p class="edsName mt-4 text-5xl lg:text-8xl md:text-7xl text-center pb-0">
       Elaine Denald Stewart
     </p>
-    <p class="profession text-center text-2xl md:text-3xl leading-none border">Writer & Author</p>
+    <p class="profession text-center text-2xl md:text-3xl leading-none">Writer & Author</p>
     
-    <p class="books mx-auto mt-8 text-3xl border-t border-b tracking-wider">
+    <p class="books mx-auto mt-8 text-3xl border-t border-b border-bgColor1 tracking-widest">
       Epiphany & Rhymes Books
       </p>
     </div>
@@ -44,7 +43,7 @@ import eds from '../assets/images/edslogo12.svg'
 
   .welcome {
     font-family: 'Dancing Script Variable', cursive;
-    transform: scale(.75, 1)
+    transform: scale(.85, 1)
   }
 
   .profession {
@@ -53,8 +52,8 @@ import eds from '../assets/images/edslogo12.svg'
   }
 
   .back {
-    height: 380px;
-    width: 280px;
+    height: 18rem;
+    width: 18rem;
     background-color: #BAC5A4;
     /* align-content: end;
     justify-content: start; */
@@ -63,6 +62,8 @@ import eds from '../assets/images/edslogo12.svg'
 
   .books {
     font-family: 'Cormorant Upright', serif;
+    transform: scale(.75, 1);
+    font-weight: 500;
   }
 
   .wrapper {
