--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -16,7 +16,7 @@ const navItems = [
         <!-- DESKTOP NAVIGATION START -->
          <div class="container mx-auto">
       <nav
-        class="relative pl-1 flex justify-between items-center w-full border-t border-b"
+        class="relative pl-1 flex justify-between items-center w-full border-t border-b border-bgColor1"
       >
         <!-- eds icon -->
          <div class="mx-auto lg:mx-8 h-18 w-32">
@@ -59,7 +59,7 @@ const navItems = [
       >
         <div class="navbar-backdrop fixed inset-0 opacity-25"></div>
         <nav
-          class="relative flex flex-col py-6 px-6 h-full w-full bg-white border-r overflow-y-auto"
+          class="relative flex flex-col py-6 px-1 h-full w-full bg-white border-r overflow-y-auto"
         >
           <div class="flex flex-col items-center mb-8">
 
@@ -92,7 +92,7 @@ const navItems = [
           </div>
 
           <!-- Mobile Nav menu items -->
-          <div class="text-center">
+          <div class="mx-auto">
             <ul>
               <NavItem href="/" label="Home" mobile/>
               <NavItem href="about" label="About Me" mobile/>
@@ -104,7 +104,7 @@ const navItems = [
             <!--  -->
 
             <!-- copyright -->
-            <p class="my-4 text-xs text-center text-gray-400">
+            <p class="my-4 text-sm text-center text-gray-400">
               <span>© 2020 All rights reserved.</span>
             </p>
           </div>
