--- a/src/components/NewestBook.astro
+++ b/src/components/NewestBook.astro
@@ -3,7 +3,7 @@
 ---
   
   
-  <div class="container flex h-400 w-full">
+  <!-- <div class="container flex h-400 w-full">
     <div
       class="text-center flex-1 border">
       <p class="">
@@ -14,4 +14,4 @@
     <div class="flex-1 border text-center">
       <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio aliquid impedit corrupti magni unde nam at, dolor excepturi, aperiam perferendis error fuga eveniet, quia esse exercitationem non. Sed, suscipit commodi?</p>
     </div>
-  </div>
+  </div> -->
