--- a/src/layouts/NoEbookLayout.astro
+++ b/src/layouts/NoEbookLayout.astro
@@ -1,5 +1,4 @@
 ---
-
 import '@fontsource/tangerine';
 import '@fontsource-variable/dancing-script';
 import '@fontsource/cormorant-garamond/500.css';
@@ -26,18 +25,11 @@ const { title } = Astro.props;
   </head>
   <!-- bg-gradient-to-b from-[#c7ab59] to-[#ded2ab]  -->
   <!-- bg-gradient-to-b from-[#c7ab59] from-10% via-[#699ec3] via-30% to-[#ffffff] to-90% to-[#699ec3] -->
-  <body class="bg-gradient-to-b from-[#cfd59f] via-[#f7eddf] to-[#f7eddf] max-w-screen-xl mx-auto
-  ">
+  <body class="bg-gradient-to-b from-[#cfd59f] via-[#f7eddf] to-[#f7eddf] max-w-screen-xl mx-auto">
     <div class="m-auto">
     <div class="">
       <slot />
     </div>
-    <div class="">
-    <BooksCover />
-    </div>
-    <div>
-      <NewestBook />
-    </div>
-</div>
+
   </body>
 </html>
