Yet another update

--- a/src/components/BooksCover.astro
+++ b/src/components/BooksCover.astro
@@ -29,7 +29,7 @@ import FrCoverItsotfB1 from "../assets/images/FrCoverItsotfB1.jpg";
 Encircled by the shimmering blue waters of the Caribbean Sea, Jamaica boasts pristine white sand beaches and serene coastlines.<span class="font-semibold">. . .</span>
       <div class="flex flex-col mx-auto">
       <a href="https://www.amazon.com/Shade-Fire-Into-Melting-Pot/dp/1737824450/ref=sr_1_1?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759752&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-1" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
-      <a href="src/pages/ebook.astro" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      <a href="/noebook" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
       </div>
     </div>
 
@@ -58,6 +58,181 @@ Encircled by the shimmering blue waters of the Caribbean Sea, Jamaica boasts pri
       </div>
     </div>
 
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
+    <!-- Start Book 1 -->
+    <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
+      <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
+
+      <img
+      src="src/assets/images/FrCoverItsotfB1.jpg"
+      decoding="async"
+      loading="lazy"
+      class="h-96 w-64 mx-auto"        
+      />
+    <a href="" class="text-center mt-4 mb-6 bg-[#d1c097] mx-auto px-2 rounded-lg">View back cover</a>
+
+    <h1 class="text-2xl text-center">In the Shade of the Fire</h1>
+    <h2 class="text-xl text-center mt-2">Volume 1</h2>
+    <h3 class="text-lg text-center mt-2">Ancestral Spirit <br> Cultural Heritage</h3>
+
+    <p class="mt-4 text-gray-700">
+      <span class="font-semibold">In the Shade of the Fire Volume 1</span>
+                offers a personal reflection on the experience of growing up in post-colonial Jamaica during the mid-twentieth century. It delves into the island's historical context, tracing its evolution to the present day, and serves as a summary of the profound impacts of slavery on the political, social, and spiritual dimensions of its populace, whose musical expressions continue to resonate.<span class="font-semibold">. . .</span>
+      </p>
+      <div class="flex flex-col mx-auto">
+      <a href="https://www.amazon.com/Shade-Fire-Elaine-Denald-Stewart/dp/1737824426/ref=sr_1_2?crid=16L2TP4F4OYNM&dib=eyJ2IjoiMSJ9.m2gYKdNPL8RCgYjlb-623Bvs7rLRYb13rUMnAKC3UoIRdiwV_PfmZobVAhu-tYMns99NFAzn8pLQBf2hMyrbnrqqe2_wZIHqphF8xW_SelXgkR_k3sfc5gVi-lryIaPdnT7Tfu4EBT7T3RJ3WWkltjdWiKGzc6ZoxwxdUKCca_j606lzRfoe9ogw7SonL0Oa_1gHHPMhFxVSRzGnr9Qlq9f0jD2R-wnwUpf2glQNIdM.R3IZBN9QBc2t3Ofd13TP8JPwBgf4a8yeN-9WMrWIHwk&dib_tag=se&keywords=in+the+shade+of+the+fire+paperback&qid=1739759149&sprefix=in+the+shade+of+the+fire+paperback%2Caps%2C159&sr=8-2" class="bg-white w-52 h-10 my-6 text-center align-middle pt-1 hover:bg-green-200 border-black border-2 rounded-xl text-xl transition-all duration-500">Buy Print Book  <span class="ml-2">&#10148;</span></a>
+      <a href="https://books2read.com/u/4Dx0BD" class="bg-white w-52 h-10 text-center mb-6 align-middle hover:bg-green-200 rounded-xl border-black border-2 text-xl transition-all duration-500">Buy Ebook <span class="ml-2">&#10148;</span></a>
+      </div>
+    </div>
     <!-- Start Book 1 -->
     <div class="flex flex-col border border-green-700  bg-gradient-to-b from-[#dddeb6] to-[#f0e9d3] md:px-4 sm:px-6 xs:px-6">
       <h1 class="pb-2 text-2xl text-center m-6">Released fall 2021</h1>
