--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -26,7 +26,9 @@ const { title } = Astro.props;
   </head>
   <!-- bg-gradient-to-b from-[#c7ab59] to-[#ded2ab]  -->
   <!-- bg-gradient-to-b from-[#c7ab59] from-10% via-[#699ec3] via-30% to-[#ffffff] to-90% to-[#699ec3] -->
-  <body class="bg-gradient-to-b from-[#cfd59f] via-[#f7eddf] to-[#f7eddf] max-w-screen-xl mx-auto
+  <body class="md:bg-gradient-to-b md:from-[#cfd59f] md:via-[#f7eddf] md:to-[#f7eddf]
+  bg-gradient-to-b from-[#f7eddf] to-[#fff]
+  max-w-[1200px] min-w-sm mx-auto
   ">
     <div class="m-auto">
     <div class="">
