--- a/src/pages/noebook.astro
+++ b/src/pages/noebook.astro
@@ -2,7 +2,7 @@
 
 
 
-import NoEbook from '../components/NoEbook.astro';
+
 import NoEbookLayout from '../layouts/NoEbookLayout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -11,6 +11,6 @@ import NoEbookLayout from '../layouts/NoEbookLayout.astro';
 
 <NoEbookLayout title="Epiphanynrhymes Home">
   <div>
-<NoEbook />
+<slot />
 </div>
 </NoEbookLayout>
