--- a/src/components/BooksCover.astro
+++ b/src/components/BooksCover.astro
@@ -11,7 +11,7 @@ import FrCoverItsotfB1 from "../assets/images/FrCoverItsotfB1.jpg";
       <h1 class="pb-2 text-2xl text-center m-6">Released fall 2023</h1>
 
       <img
-      src="https://epipheny.netlify.app/src/assets/images/FrCoverItsotfB3.jpg"
+      src="https://epipheny.netlify.app/FrCoverItsotfB3.jpg"
       decoding="async"
       loading="lazy"
       class="h-96 w-64 mx-auto"        
